# polis

./: .gitignore  .pre-commit-config.yaml  .yamllint  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PRIVACY.md  README.md  RELEASE_NOTES.md  RESUMO_EXECUTIVO.md  RESUMO_FINAL.md  REVISAO_FASES.md  ROADMAP.md  SECURITY.md  SISTEMA_MONITORAMENTO.md  TERMS.md  audit.toml  codecov.yml  config.json  config.toml  config.yaml  demo_profissional.ps1  deny.toml  docker-compose.yml  env.example  release.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  performance.md  question.md  regression.md  security.md
.github/workflows/: build-installers.yml  ci.yml  docs.yml  release.yml
config/: orchestrator.yaml  registries.conf.example
data/: orchestrator_state.json
docs/: API_GRPC.md  API_REST.md  ARQUITETURA_INTEGRACAO.md  AUTENTICACAO_IMPLEMENTACAO.md  BENCHMARKS_IMPLEMENTACAO.md  CI_CD_IMPLEMENTACAO.md  COMMUNITY_GUIDELINES.md  DIAGRAMA_INTEGRACAO.md  INSTALLATION.md  MIGRATION_DOCKER.md  ORQUESTRACAO_AVANCADA_IMPLEMENTACAO.md  OTIMIZACAO_IMPLEMENTACAO.md  README.md  RELEASE_PREPARATION_SUMMARY.md  SEGURANCA_AVANCADA_IMPLEMENTACAO.md  TUTORIAL.md  USER_GUIDE.md  VIDEO_TUTORIALS_IMPLEMENTACAO.md
docs/tutorials/: 01-instalacao-configuracao.md  04-criando-containers.md  19-api-rest-basico.md  README.md  VIDEO_PRODUCTION_GUIDE.md
examples/: api_grpc_example.rs  api_rest_example.rs  basic_usage.rs  config.toml  config.yaml  config_example.rs  runtime_example.rs
installers/: README.md  build-cross-platform.sh
installers/linux/: install.sh
installers/macos/: install.sh
installers/scripts/: install.sh
installers/windows/: install.ps1
polis-api/: Cargo.toml
polis-api/examples/: api_example.rs
polis-api/proto/: polis.proto
polis-api/src/: auth_routes.rs  grpc.rs  handlers.rs  lib.rs  rest.rs
polis-api/tests/: api_integration_tests.rs
polis-auth/: Cargo.toml
polis-auth/examples/: auth_example.rs
polis-auth/src/: auth.rs  jwt.rs  lib.rs  middleware.rs  permissions.rs  users.rs
polis-auth/tests/: auth_tests.rs
polis-benchmarks/: Cargo.toml  README.md  criterion.toml  run_benchmarks.bat  run_benchmarks.sh
polis-benchmarks/benches/: api_benchmarks.rs  container_benchmarks.rs  image_benchmarks.rs  network_benchmarks.rs  security_benchmarks.rs  storage_benchmarks.rs
polis-build/: Cargo.toml
polis-build/src/: builder.rs  cache.rs  context.rs  dockerfile.rs  error.rs  lib.rs
polis-cli/: Cargo.toml
polis-cli/src/: main.rs
polis-core/: Cargo.toml
polis-core/examples/: config_example.rs
polis-core/src/: config.rs  error.rs  lib.rs  logging.rs  test_utils.rs  types.rs  utils.rs
polis-core/tests/: config_tests.rs  error_tests.rs  types_tests.rs
polis-image/: Cargo.toml  examples
polis-image/src/: cleanup.rs  image.rs  layer.rs  lib.rs  registry.rs  registry_config.rs  search.rs
polis-image/tests/: image_tests.rs
polis-monitor/: Cargo.toml
polis-monitor/examples/: monitoring_example.rs
polis-monitor/src/: alerts.rs  dashboard.rs  exporter.rs  health.rs  lib.rs  logs.rs  metrics.rs
polis-network/: Cargo.toml
polis-network/examples/: network_example.rs
polis-network/src/: bridge.rs  dns.rs  firewall.rs  ipam.rs  lib.rs  network.rs  port.rs  port_forwarding.rs
polis-optimization/: Cargo.toml  README.md
polis-optimization/examples/: optimization_example.rs
polis-optimization/src/: caching.rs  compression.rs  lib.rs  memory.rs  optimization.rs  performance.rs  profiling.rs
polis-optimization/tests/: optimization_tests.rs
polis-orchestrator/: Cargo.toml  README.md
polis-orchestrator/examples/: advanced_orchestration_example.rs
polis-orchestrator/src/: auto_scaling.rs  health_monitor.rs  lib.rs  load_balancer.rs  orchestrator.rs  scheduler.rs  service_discovery.rs
polis-orchestrator/tests/: advanced_orchestration_tests.rs
polis-runtime/: Cargo.toml
polis-runtime/examples/: runtime_example.rs
polis-runtime/src/: container.rs  lib.rs  process.rs  runtime.rs
polis-runtime/tests/: runtime_integration_tests.rs
polis-sdk/: Cargo.toml
polis-sdk/src/: client.rs  types.rs
polis-security/: Cargo.toml
polis-security/examples/: advanced_security_example.rs  security_example.rs
polis-security/src/: apparmor.rs  capabilities.rs  cgroups.rs  lib.rs  namespace.rs  sandbox.rs  seccomp.rs  security_manager.rs  selinux.rs
polis-security/tests/: advanced_security_tests.rs  security_tests.rs
polis-stats/: Cargo.toml
polis-stats/src/: collector.rs  container_stats.rs  error.rs  lib.rs  metrics.rs  stats.rs
polis-storage/: Cargo.toml
polis-storage/src/: driver.rs  lib.rs  volume.rs
polis-tests/: Cargo.toml
polis-tests/src/: benchmarks.rs  integration.rs  lib.rs
scripts/: build.ps1  build.sh  check.ps1  check.sh
