[package]
name = "polis-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "REST and gRPC APIs for Polis"

[dependencies]
polis-core = { path = "../polis-core" }
polis-auth = { path = "../polis-auth" }
polis-runtime = { path = "../polis-runtime" }
polis-image = { path = "../polis-image" }
polis-orchestrator = { path = "../polis-orchestrator" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }

