[package]
name = "polis-auth"
version = "0.1.0"
edition = "2021"
authors = ["Polis Team"]
license = "MIT"
repository = "https://github.com/polis-project/polis"
description = "Polis Authentication and Authorization System"

[dependencies]
polis-core = { path = "../polis-core" }
jsonwebtoken = "10.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
argon2 = "0.5"
rand = "0.9"
getrandom = "0.3"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.7", features = ["full"] }
tower = "0.5"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
