[package]
name = "polis-build"
version = "0.1.0"
edition = "2021"
authors = ["Polis Team <team@polis.dev>"]
description = "Container image building and management for Polis"
license = "MIT"
repository = "https://github.com/polis-dev/polis"
keywords = ["container", "build", "dockerfile", "image", "oci"]
categories = ["os::linux-apis", "development-tools::build-utils"]

[dependencies]
# Core dependencies
polis-core = { path = "../polis-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Build and file handling
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
walkdir = "2.4"
tempfile = "3.8"
regex = "1.10"

# Dockerfile parsing
nom = "7.1"
thiserror = "2.0"
anyhow = "1.0"

# Async and error handling
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Collections
dashmap = "5.5"
indexmap = "2.0"

# Image handling
oci-spec = "0.8"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

# [[bench]]
# name = "build_bench"
# harness = false