[package]
name = "polis-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Polis"

[[bin]]
name = "polis"
path = "src/main.rs"

[dependencies]
polis-core = { path = "../polis-core" }
polis-api = { path = "../polis-api" }
polis-runtime = { path = "../polis-runtime" }
polis-image = { path = "../polis-image" }
polis-stats = { path = "../polis-stats" }
polis-build = { path = "../polis-build" }
polis-network = { path = "../polis-network" }
polis-storage = { path = "../polis-storage" }
polis-orchestrator = { path = "../polis-orchestrator" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
