[package]
name = "polis-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Container image management and registry operations"

[dependencies]
polis-core = { path = "../polis-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
