[package]
name = "polis-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Container networking and connectivity"

[dependencies]
polis-core = { path = "../polis-core" }

tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }

