[package]
name = "polis-optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
polis-core = { path = "../polis-core" }
polis-runtime = { path = "../polis-runtime" }
polis-image = { path = "../polis-image" }
polis-api = { path = "../polis-api" }
polis-security = { path = "../polis-security" }
polis-network = { path = "../polis-network" }
polis-storage = { path = "../polis-storage" }
polis-monitor = { path = "../polis-monitor" }

# Performance and memory optimization
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Memory optimization
jemallocator = "0.5"
mimalloc = "0.1"
tcmalloc = "0.1"

# Performance monitoring
sysinfo = "0.37"
procfs = "0.15"
perf-event = "0.4"

# Caching and optimization
lru = "0.12"
dashmap = "5.5"
arc-swap = "1.6"
crossbeam = "0.8"

# Compression and serialization
bincode = "1.3"
zstd = "0.13"
lz4 = "1.24"

# Async optimization
futures = "0.3"
async-trait = "0.1"
tokio-util = "0.7"

# Memory profiling
heaptrack = "0.1"
flamegraph = "0.4"
