[package]
name = "polis-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Container orchestration and scheduling"

[dependencies]
polis-core = { path = "../polis-core" }
polis-runtime = { path = "../polis-runtime" }
polis-monitor = { path = "../polis-monitor" }

tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }

