[package]
name = "polis-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Software Development Kit for Polis"

[dependencies]
polis-core = { path = "../polis-core" }
polis-api = { path = "../polis-api" }

tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

