[package]
name = "polis-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration tests and benchmarks for Polis"

[dependencies]
polis-core = { path = "../polis-core" }
polis-runtime = { path = "../polis-runtime" }
polis-api = { path = "../polis-api" }
polis-cli = { path = "../polis-cli" }

tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

